Fixed: Was missing space around top-level list items on list pages

--- a/static/css/list_pages.scss
+++ b/static/css/list_pages.scss
@@ -24,7 +24,7 @@
         border-color: transparent;
         border-style: solid;
         border-width: 1px;
-        padding: 0 .5em;
+        padding: .25em .5em;
 
         &:hover, &:focus {
             text-decoration: none;
